# ConformalPrediction

./: main.py  pyproject.toml
notebooks/: Conformal1.ipynb  Conformal2.ipynb  ConformalWeights.ipynb  OnlineCLS-test.ipynb  basic-conf-inf-sims.ipynb  calculations.ipynb
utils/: CLS.py  basic_conformal_inference.py
utils/.ipynb_checkpoints/: OnlineCLS-checkpoint.py  OnlineCLS-test-checkpoint.ipynb
