[tool.poetry]
name = "conformalprediction"
version = "0.1.0"
description = ""
authors = ["J-R-Paul <73599839+J-R-Paul@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mapie = "^0.8.6"
numpy = "<1.27"
scikit-learn = "<1.5"
numba = "^0.60.0"
jupyter = "^1.0.0"
polars = "^0.20.31"
jax = "^0.4.30"
plotnine = "^0.13.6"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
lightgbm = "^4.4.0"
xgboost = "^2.1.0"
skforecast = "^0.12.1"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
